# promo-load-analyzer

./: .env.example  .gitignore  CLAUDE.md  CLI_SETUP_GUIDE.md  COHERENCE_CHECK_REPORT.md  INSTALLATION_COMPLETE.txt  MONITORING_QUICK_START.md  README.md  STATUS.md  docker-compose.monitoring.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.bmad-core/: install-manifest.yaml
docs/: GRAFANA_DASHBOARD_GUIDE.md  architecture.md  prd.md
docs/architecture/: coding-standards.md  components.md  core-workflows.md  data-models.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  security.md  source-tree.md  tech-stack.md  test-strategy.md
docs/epics/: epic-1-project-setup.md  epic-2-detection-modules.md  epic-3-k6-generation-execution.md  epic-4-analysis-reporting.md  epic-5-prod-safety-validation.md
docs/prd/: architecture.md  composants.md  dploiement.md  dtection-automatique.md  executive-summary.md  format-output.md  index.md  interface-paramtres.md  limitations-risques.md  mcanismes-de-protection.md  mtriques-scoring.md  objectifs-contexte.md  orchestr-par-claude-code.md  rfrences.md  roadmap.md  support.md  tests.md  troubleshooting.md  usage.md  utilisateurs.md
monitoring/: .gitignore  README.md
scripts/: check_dependencies.sh  check_k6.sh  run_tests.sh  setup_dev.sh  start_monitoring.sh  status_monitoring.sh  stop_monitoring.sh  test_monitoring.sh  validate_k6_scripts.py
src/: __init__.py  cli.py  config.py  constants.py  k6_executor.py  k6_generator.py  main.py  page_detector.py  promo_scraper.py  report_generator.py  results_analyzer.py
src/models/: __init__.py  k6_config.py  k6_results.py  (+2 more)
templates/: template_category.js  template_homepage.js  template_landing.js  template_product.js
tests/: __init__.py
(+14 files in other folders)
